<resources>
    <!-- Manifest -->
    <string name="app_name">Remoiler</string>
    <string name="activity_schedule_editor_label">Schedule Editor</string>
    <string name="activity_boiler_editor_label">Boiler Editor</string>
    <string name="activity_wifi_setup_label">Wi-Fi Setup</string>


    <!-- Main Activity -->
    <string name="main_empty_view_text">No Remoilers have been set yet!\nClick on the Plus and add one!</string>

    <!-- Tab Titles -->
    <string name="fragment_switch">On/Off</string>
    <string name="fragment_schedule">Schedule</string>

    <!-- Status change message -->
    <string name="status_on">ON</string>
    <string name="status_off">OFF</string>
    <string name="status_change_msg">The boiler is now %s!</string>

    <!-- Boiler Editor -->
    <string name="boiler_editor_general">General</string>
    <string name="boiler_editor_add_with_qr">Scan QR key</string>
    <string name="boiler_editor_hint_name">Name</string>
    <string name="boiler_editor_hint_key">Key</string>
    <string name="boiler_editor_error_fill_all_fields">Please fill in all fields.</string>
    <string name="boiler_editor_menu_save">save</string>
    <string name="boiler_editor_insert_successful">Boiler saved</string>
    <string name="boiler_editor_insert_failed">Error with saving boiler</string>


    <!-- Boiler Activity -->
    <string name="boiler_error_no_internet_connection">No internet connection!</string>
    <string name="boiler_error_check_your_connection">Check your connection and try again.</string>
    <string name="boiler_error_remoiler_is_offline">Remoiler is offline.</string>
    <string name="boiler_error_make_sure_remoiler_is_connected">Please make sure remoiler is connected to Wi-Fi and try again.</string>

    <!-- Schedule Fragment -->
    <string name="schedule_start_time">start time:</string>
    <string name="schedule_end_time">end time:</string>
    <string name="schedule_days_in_week">returns:</string>
    <string name="schedule_sunday">Su</string>
    <string name="schedule_monday">M</string>
    <string name="schedule_tuesday">Te</string>
    <string name="schedule_wednesday">W</string>
    <string name="schedule_thursday">Th</string>
    <string name="schedule_friday">F</string>
    <string name="schedule_saturday">Sa</string>
    <string name="schedule_error_something_went_wrong">Something went wrong..</string>
    <string name="schedule_error_couldnt_reach_server">Couldn\'t reach the server, try again later.</string>
    <string name="schedule_loading_from_server">Loading from server..</string>

    <!-- Schedule Editor -->
    <string name="schedule_editor_start_time">Start Time:</string>
    <string name="schedule_editor_end_time">End Time:</string>

    <!-- GENERAL menu strings -->
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>

    <!-- Network Utils -->
    <string name="boiler_error_cant_get_data_from_server">Can\'t get data from server.</string>
    <string name="boiler_error_please_try_again_later">Please try again later.</string>

    <!-- QR Reader Strings -->
    <string name="qr_scan_barcode_button">Scan barcode</string>
    <string name="qr_no_barcode_captured">No barcode captured</string>
    <string name="qr_barcode_error_format">"Error reading barcode: %1$s"</string>

    <string name="qr_ok">OK</string>
    <string name="qr_permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="qr_no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="qr_low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

</resources>
