<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin"
    tools:context=".BoilerEditor">

    <!-- Label -->
    <TextView
        android:text="@string/boiler_editor_general"
        style="@style/CategoryStyle" />

    <!-- Input fields -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:orientation="vertical">

        <!-- Name field -->
        <EditText
            android:id="@+id/boiler_editor_name_edit"
            android:hint="@string/boiler_editor_hint_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

        <!-- Key field -->
        <EditText
            android:id="@+id/boiler_editor_key_edit"
            android:hint="@string/boiler_editor_hint_key"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

        <Button
            android:id="@+id/boiler_editor_qr_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/boiler_editor_add_with_qr"/>
    </LinearLayout>



</LinearLayout>
